# opneid-server

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
opneid_server/: asgi.py  router.py
